src/objects/Nielsen_Data__c.object
<CustomObject>
    <description>This Object has been created as part of the CRM Quick Wins2 Project. It will be populated from an external system by BIU.</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NielsenData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advert_Size__c</fullName>
        <label>Advert Size</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreativeId__c</fullName>
        <label>CreativeId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenditure__c</fullName>
        <label>Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Seen__c</fullName>
        <label>First Seen</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incidence__c</fullName>
        <label>Incidence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Seen__c</fullName>
        <label>Last Seen</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Group__c</fullName>
        <label>Publication Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Nielsen Data</label>
    <nameField>
        <displayFormat>ND-{00000000}</displayFormat>
        <label>ND Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nielsen Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>